k8s/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: activemq
  annotations:
    appName: "activemq-5.10.0"
spec:
  replicas: 2
  serviceName: activemq
  selector:
    matchLabels:
      io.kubernetes/app-name: activemq
      io.activemq/version: "5.10"
  template:
    metadata:
      labels:
        io.kubernetes/app-name: activemq
        io.activemq/version: "5.10"
    spec:
      terminationGracePeriodSeconds: 10
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: "kubernetes.io/hostname"
              labelSelector:
                matchLabels:
                  io.kubernetes/app-name: activemq
                  io.activemq/version: "5.10"
      securityContext:
        fsGroup: 1000
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: activemq-data
      containers:
        - name: activemq
          imagePullPolicy: IfNotPresent
          image: dipayanp007/amq:5.10
          ports:
          - name: ui
            containerPort: 8161
          - name: openwire
            containerPort: 61616
          - name: amqp
            containerPort: 5672
          - name: stomp
            containerPort: 61613
          - name: mqtt
            containerPort: 1883
          - name: ws
            containerPort: 61614
          volumeMounts:
            - mountPath: /opt/activemq/data
              name: data
